@@ -2,3 +2,4 @@ DIST brakeman-2.0.0.tar.gz 443401 SHA256 0220b8ed3bd2928a7ec5c9e2be00ce596f4f44d
 DIST brakeman-2.1.1.tar.gz 452854 SHA256 9a16b04786b1f1f9aa466b74dbde092fc238d9d7376112d1a9d8e778d6f25293 SHA512 1479f26659d699bd33112c53e86ac370abe814e5e5f40653d2a501aaafd21ff3f858fd6dad1cb9e675b15e446a819a5cec8432d28c1530e6714a0de1b396d13a WHIRLPOOL f1b7e992e517fb0171ea3c6c6e7ea3ab59790efbafe4be93f359ddd1b4bed7cccdda906c5d07af7a4ca377193bac6f49ab9daa5bef615c73cd523a5d42ba5236
 DIST brakeman-2.1.2.tar.gz 454075 SHA256 e1a30b8b1828dd7544d6c82b3f3d44ba25afc339ff84467855d9adfbb455acae SHA512 634bdf81dce7937e7527b7c67831b09b4147ed1d8af69eefbf05f0010daec2b64908374a2406da34d13170fbfa5b7470106e016ed9a9235c6981005a78625db0 WHIRLPOOL ca5cecd69bd35dff42061be335dc62f3c4ecc3dd0d0d0560b1bb36d63b9637b3e2f93e9eb0de08447404b6b44229e9fe7c4bcfa8d4485409aeda93c3eb7c9c23
 DIST brakeman-2.2.0.tar.gz 477638 SHA256 9c364c3a5eb8aa6134d0205ce17ed92921ff9f4864c6cef47708aed4f1e7a063 SHA512 c3ea24a66e52fc20ee015065cbc9ee89b6a72c25aee44fb0d9fe2bc7e85e812e0d0cb796db4b18005634dc998f7557c07c1e7f9a0566e1ff75a897b03ecec84e WHIRLPOOL 432728b80631d95d9d3122b8da05eb7cb11698b66a0a4917b0e82f3a13364471aed3a257b70b93410a407d43b4873c79aa241a38a9b112f80a90daa6a192149b
+DIST brakeman-2.3.1.tar.gz 484253 SHA256 e46cb6a17759e2f39db1db489a7bd99c4e4edfa6b4048b7ba44fa63158c1c6a2 SHA512 a284f97285a33f4713253b00388e56e5fcc028ae1c4cd6ad4d2de5d8daf14da4907e2e7d65cc5404797f7f202b2e461b04a07df6b079802d9afbdf50fe3625bf WHIRLPOOL 3aa41de3ec5d9f7108194a5e789781b7ae31fc3c94c444e5b909a3230c0844d5f9d54b0e118405456d7ab3a651728616269e5adb14ad7f72308e5bca88e099f4
