@@ -1,6 +1,11 @@
 # ChangeLog for app-forensics/brakeman
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*brakeman-2.3.1 (09 Jan 2014)
+
+  09 Jan 2014; Hans de Graaff <graaff@gentoo.org> +brakeman-2.3.1.ebuild:
+  Version bump.
 
 *brakeman-2.2.0 (29 Nov 2013)
 
